<resources>
    <string name="app_name">Master Food</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="lblRegister">¿No tienes una cuenta?</string>
    <string name="register">Registrate</string>
    <string name="imagelogin">imagelogin</string>
    <string name="forgotPass">¿Olvidaste la contraseña?</string>
    <string name="confirmPass">Confirmar contraseña</string>
    <string name="email">Email</string>
    <string name="lastName">Apellidos</string>
    <string name="name">Nombre</string>
    <string name="imageview">imageView</string>
    <string name="home">Inicio</string>
    <string name="my_recipes">Mis recetas</string>
    <string name="search">Buscar</string>
    <string name="profile">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">usuario</string>
    <string name="welcome">Bienvenido</string>
    <string name="search_elements">¿Qué quieres aprender hoy?</string>
    <string name="nameProfile">Nombre:</string>
    <string name="lastnameProfile">Apellidos:</string>
    <string name="editPassword">EDITAR CONTRASEÑA</string>
    <string name="editUser">EDITAR</string>
    <string name="emailUser">Email de usuario</string>
    <string name="lastnameUser">Apellido de usuario</string>
    <string name="nameUser">Nombre de usuario</string>
    <string name="emailProfile">Email:</string>
    <string name="imageprofile">imageProfile</string>
    <string name="welcomeToProfile">Bienvenido a tu perfil</string>
    <string name="searchMyRecipes">Buscar en mis recetas...</string>
    <string name="editProfile">Editar perfil</string>
    <string name="save">Guardar</string>
    <string name="goback">Regresar</string>
    <string name="editPass">Editar contraseña</string>
    <string name="camera">CÁMARA</string>
    <string name="gallery">GALERÍA</string>
    <string name="SelectImage">Seleccionar foto de perfil</string>
    <string name="required">Campo requerido</string>
    <string name="checkEmail">El email ya se encuentra registrado</string>
    <string name="passnotmatch">La contraseña no coincide</string>
    <string name="rulesPass">Contraseña con un mínimo de 8 caracteres, una mayúscula, una minúscula y un número</string>
    <string name="permissio_denied">Permiso denegado</string>
    <string name="enable_permissions">Parece que has desactivado los permisos requeridos para activar la cámara. Se puede habilitar en la configuración de la aplicación.</string>
    <string name="go_to_configuration">Ir a configuración</string>
    <string name="cancel">Cancelar</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="logout">CERRAR SESIÓN</string>
    <string name="welcomeHome">Bienvenido</string>
    <string name="add">Añadir</string>
    <string name="create_recipe">Crear receta</string>
    <string name="title">Título</string>
    <string name="amount">Cantidad de personas</string>
    <string name="nationality">Nacionalidad</string>
    <string name="selectDifficulty">Seleccionar tipo de dificultad</string>
    <string name="selectFoodType">Seleccionar tipo de comida</string>
    <string name="publish">Publicar</string>
    <string name="utensils">Utensilios</string>
    <string name="ingredients">Ingredientes</string>
    <string name="recipe_publish">Receta publicada</string>
    <string name="EmptyIngredientsList">Faltan ingredientes</string>
    <string name="EmptyUtensilsList">Faltan utensilios</string>
    <string name="EmptyStepsList">Faltan los pasos de la receta</string>
    <string name="InternetNotAvailable">No hay internet!</string>
    <string name="LoginError">No es posible iniciar sesion</string>
    <string name="selectPhoto">Seleccione foto de portada</string>
    <string name="recipe_created_by">Receta hecha por:</string>
    <string name="difficulty">Dificultad:</string>
    <string name="nationality_details">Nacionalidad:</string>
    <string name="amount_people_details">Cantidad de personas:</string>
    <string name="showIngredients">Ver Ingredientes</string>
    <string name="listIngredients">Lista de Ingredientes</string>
    <string name="showUtensils">Ver utensilios</string>
    <string name="listUtensils">Lista de Utensilios</string>
    <string name="steps">Pasos</string>
    <string name="addSteps">Añadir pasos</string>
    <string name="list_images">Imagenes</string>
    <string name="show_steps">Ver pasos</string>
    <string name="list_steps">Lista de pasos</string>
    <string name="add_photos">Añadir Imagenes</string>
    <string name="image_add">Imagen agregada</string>
    <string name="photolist_empty">No se han añadido imagenes</string>
    <string name="show_images">Ver imagenes</string>
</resources>